--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -49,7 +49,7 @@
 .shareOption {
   display: flex;
   align-items: center;
-  margin-right: 15px;
+  margin-right:7px;
   cursor: pointer;
 }
 
@@ -92,4 +92,8 @@
   right: 20px;
   cursor: pointer;
   opacity: 0.7;
+}
+
+input[type="file"] {
+  display: none;
 }
